--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -11,12 +11,21 @@
     "import requests\n",
     "from datetime import datetime\n",
     "import json\n",
-    "import collections"
+    "from collections import OrderedDict"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run common.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,11 +33,11 @@
      "output_type": "stream",
      "text": [
       "<class 'dict'> 2 dict_keys(['Meta Data', 'Time Series (Daily)'])\n",
-      "{'1. Information': 'Daily Time Series with Splits and Dividend Events', '4. Output Size': 'Full size', '3. Last Refreshed': '2018-06-14', '5. Time Zone': 'US/Eastern', '2. Symbol': 'S&P500 Index'} \n",
+      "{'2. Symbol': 'S&P500 Index', '4. Output Size': 'Full size', '3. Last Refreshed': '2018-06-15', '1. Information': 'Daily Time Series with Splits and Dividend Events', '5. Time Zone': 'US/Eastern'} \n",
       "\n",
-      "4642\n",
-      "CPU times: user 49.7 ms, sys: 49.2 ms, total: 99 ms\n",
-      "Wall time: 5.91 s\n"
+      "4643\n",
+      "CPU times: user 45.9 ms, sys: 35.3 ms, total: 81.3 ms\n",
+      "Wall time: 16.2 s\n"
      ]
     }
    ],
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,8 +93,8 @@
      "output_type": "stream",
      "text": [
       "<class 'list'>\n",
-      "{'4. close': '1455.2200', '2. high': '1478.0000', '5. adjusted close': '1455.2200', '1. open': '1469.2500', '6. volume': '931800000', '8. split coefficient': '1.0000', '3. low': '1438.3600', '7. dividend amount': '0.0000'} 1455.2200\n",
-      "4642 4642\n",
+      "{'6. volume': '931800000', '1. open': '1469.2500', '5. adjusted close': '1455.2200', '3. low': '1438.3600', '7. dividend amount': '0.0000', '8. split coefficient': '1.0000', '4. close': '1455.2200', '2. high': '1478.0000'} 1455.2200\n",
+      "4643 4643\n",
       "1 1455.2200\n",
       "0 1399.4200\n",
       "1 1402.1100\n",
@@ -97,7 +106,7 @@
    "source": [
     "# 把获取到的股票data按日期排序,并按照今天比昨天是否增长设置1和0\n",
     "# 今天比昨天价格更低为0,否则为1(可能是涨,可能是维持不变)\n",
-    "ostock_data_dict = collections.OrderedDict(sorted(stock_data_dict.items()))\n",
+    "ostock_data_dict = OrderedDict(sorted(stock_data_dict.items()))\n",
     "\n",
     "new_stocks = dict()\n",
     "new_stock_keys = list(ostock_data_dict.keys())\n",
@@ -122,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,15 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.6 s, sys: 557 ms, total: 3.15 s\n",
-      "Wall time: 3.16 s\n"
+      "ValueError 'utf-8' codec can't decode byte 0x9c in position 16: invalid start byte\n",
+      "skip_count=47\n",
+      "CPU times: user 4.4 s, sys: 643 ms, total: 5.05 s\n",
+      "Wall time: 5.05 s\n"
      ]
     }
    ],
@@ -169,13 +180,13 @@
     "\n",
     "# Read News Headlines\n",
     "train_list = []\n",
+    "skip_count = 0\n",
     "\n",
     "for category in categories:\n",
     "    category_path = TRAINING_PATH + category + \"/\"\n",
     "    \n",
     "    for filename in os.listdir(category_path):\n",
     "        filepath = category_path + filename\n",
-    "        # print(filepath)\n",
     "        with open(filepath, encoding='utf-8') as file:\n",
     "            try:\n",
     "                words = file.read().strip().split('-- http://www.bloomberg.com')\n",
@@ -187,24 +198,33 @@
     "                        # Remove '-- ' prefix of time and title\n",
     "                        ari_title = abs_words[0].replace('-- ', '')\n",
     "                        ari_time = abs_words[2].replace('-- ', '')\n",
-    "                        if category in stock_data_dict.keys():\n",
+    "                        \n",
+    "                        # Check if ari_time is valid\n",
+    "                        if utcdate2timestamp(ari_time[0:10]) == False:\n",
+    "                            skip_count += 1\n",
+    "                            continue\n",
+    "                        \n",
+    "                        if category in stock_data_dict.keys() and len(ari_title) > 0:\n",
     "                            price = new_stocks[category]\n",
     "                            train_list.append([ari_time, ari_title, price])\n",
-    "            except ValueError:\n",
-    "                print (ValueError)\n",
-    "                break\n"
+    "            except ValueError as e:\n",
+    "                print('ValueError', e)\n",
+    "                skip_count += 1\n",
+    "                break\n",
+    "\n",
+    "print('skip_count=%d' % skip_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of training data frames: (55483, 3)\n",
+      "Shape of training data frames: (54947, 3)\n",
       "2006-10-20T20:16:16Z ::: Inco's Net Soars on Higher Metal Prices, Breakup Fee\n",
       "2000-01-03\n",
       "2006-10-23T11:51:36Z ::: EU Energy Chief Backs German Plan for Price Controls\n",
@@ -230,15 +250,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28.4 ms, sys: 13.3 ms, total: 41.6 ms\n",
-      "Wall time: 39.1 ms\n"
+      "CPU times: user 34.9 ms, sys: 18.3 ms, total: 53.2 ms\n",
+      "Wall time: 57.2 ms\n"
      ]
     }
    ],
@@ -249,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +277,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
-      "Wall time: 6.44 µs\n"
+      "Wall time: 5.96 µs\n"
      ]
     }
    ],
@@ -272,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(55483, 3)\n",
+      "(54947, 3)\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "0     1\n",
       "1     1\n",
