--- a/word2Vec.ipynb
+++ b/word2Vec.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from gensim.models.word2vec import Word2Vec\n",
     "from gensim.utils import simple_preprocess"
@@ -16,6 +17,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run common.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +105,7 @@
        "4      1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,32 +149,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2006-10-27</td>\n",
-       "      <td>balda say investor asks</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2006-11-01</td>\n",
-       "      <td>ace lift pay</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.001181</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2006-11-08</td>\n",
-       "      <td>namibian investors buy absa 's</td>\n",
+       "      <td>0.001574</td>\n",
+       "      <td></td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2006-11-09</td>\n",
-       "      <td>firstrand say law may pare fees</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.001968</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2006-11-09</td>\n",
-       "      <td>china stocks rise 30 % in #</td>\n",
+       "      <td>0.002755</td>\n",
+       "      <td>balda say investor asks</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -172,15 +182,15 @@
        "</div>"
       ],
       "text/plain": [
-       "     ari_time                        ari_title  price\n",
-       "0  2006-10-27          balda say investor asks      0\n",
-       "1  2006-11-01                     ace lift pay      0\n",
-       "2  2006-11-08   namibian investors buy absa 's      1\n",
-       "3  2006-11-09  firstrand say law may pare fees      0\n",
-       "4  2006-11-09      china stocks rise 30 % in #      0"
+       "   ari_time                ari_title  price\n",
+       "0  0.000000                               1\n",
+       "1  0.001181                               1\n",
+       "2  0.001574                               1\n",
+       "3  0.001968                               1\n",
+       "4  0.002755  balda say investor asks      0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,16 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['balda', 'say', 'investor', 'asks'], ['ace', 'lift', 'pay'], ['namibian', 'investors', 'buy', 'absa'], ['firstrand', 'say', 'law', 'may', 'pare', 'fees'], ['china', 'stocks', 'rise', 'in']]\n",
-      "CPU times: user 1.93 s, sys: 8.06 ms, total: 1.94 s\n",
-      "Wall time: 1.94 s\n"
+      "[[], [], [], [], ['balda', 'say', 'investor', 'asks'], [], ['ace', 'lift', 'pay'], [], [], []]\n",
+      "CPU times: user 1.73 s, sys: 23.7 ms, total: 1.75 s\n",
+      "Wall time: 1.75 s\n"
      ]
     }
    ],
@@ -210,28 +220,26 @@
     "\n",
     "corpus = list(map(simple_preprocess, train_reduce_df['ari_title']))\n",
     "corpus += list(map(simple_preprocess, train_df['ari_title']))\n",
-    "# corpus = train_df['ari_title']\n",
     "\n",
-    "print(corpus[0:5])"
+    "print(corpus[0:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.4 s, sys: 83.9 ms, total: 18.5 s\n",
-      "Wall time: 7.08 s\n"
+      "CPU times: user 16 s, sys: 124 ms, total: 16.1 s\n",
+      "Wall time: 6.05 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "EMBEDDING_DIM=50\n",
     "\n",
     "model = Word2Vec(corpus, size=EMBEDDING_DIM, iter=10)\n",
     "model.save('word2vec.model')"
@@ -239,22 +247,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word2Vec(vocab=9393, size=50, alpha=0.025)\n",
-      "(55483, 3)\n",
-      "660986 28493 19100\n",
-      "0.6703400835292879\n"
+      "Max word count is 579 among 54947 titles.\n"
      ]
     }
    ],
    "source": [
-    "# Calculate number of unseen words\n",
+    "# [Optional] Calculate max length among all titles for checking, ref MAX_WORD_COUNT in constants.ipynb\n",
+    "max_word_count = np.max(list(map(len, corpus)))\n",
+    "print(\"Max word count is %d among %d titles.\" % (max_word_count, len(train_df['ari_title'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word2Vec(vocab=8723, size=50, alpha=0.025)\n",
+      "(54947, 3)\n",
+      "590964 28337 19614\n",
+      "0.6921692486854643\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [Optional] Calculate number of unseen words for checking\n",
     "words = {}\n",
     "word_count = 0\n",
     "unseen_count = 0\n",
@@ -263,7 +290,8 @@
     "        word_count += 1\n",
     "        if word in words:\n",
     "            continue\n",
-    "        words[word] = True\n",
+    "        else:\n",
+    "            words[word] = True\n",
     "        if word not in model.wv.vocab:\n",
     "            unseen_count += 1            \n",
     "non_repeated_words = len(words)\n",
