limit the key words that be trained(now limited 20 words).use news from 2010-05-03 to 2013-11-26.if reverb dont usefull, use a news title. set price attribute to 1 when that day dont have stock price

--- a/word2Vec.ipynb
+++ b/word2Vec.ipynb
@@ -56,33 +56,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2006-10-20T20:16:16Z</td>\n",
-       "      <td>Inco's Net Soars on Higher Metal Prices, Break...</td>\n",
+       "      <th>139</th>\n",
+       "      <td>2010-06-13</td>\n",
+       "      <td>ANZ Bank Seeking to Double Its Northeast Asian...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2006-10-23T11:51:36Z</td>\n",
-       "      <td>EU Energy Chief Backs German Plan for Price Co...</td>\n",
+       "      <th>145</th>\n",
+       "      <td>2010-06-13</td>\n",
+       "      <td>Abu Dhabi Said to Invite Sulfur Granulation Pl...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2006-10-23T20:00:29Z</td>\n",
-       "      <td>Ex-Plant Worker Shuster Pleads Guilty in Tradi...</td>\n",
+       "      <th>47</th>\n",
+       "      <td>2010-06-13</td>\n",
+       "      <td>Agility, Arabtec, Gulf Finance House, Sahara, ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2006-10-24T10:53:59Z</td>\n",
-       "      <td>Russia, Ukraine End Dispute That Cut Gas Supplies</td>\n",
+       "      <th>188</th>\n",
+       "      <td>2010-06-13</td>\n",
+       "      <td>Air India, Boeing to Hold Talks Over Plane Del...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2006-10-24T01:32:04Z</td>\n",
-       "      <td>Jim Cramer: Bare Escentuals, Allergan, Medicis...</td>\n",
+       "      <th>174</th>\n",
+       "      <td>2010-06-13</td>\n",
+       "      <td>Al-Qaeda Gunmen Storm Iraqi Central Bank, Kill...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -90,19 +90,12 @@
        "</div>"
       ],
       "text/plain": [
-       "               ari_time                                          ari_title  \\\n",
-       "0  2006-10-20T20:16:16Z  Inco's Net Soars on Higher Metal Prices, Break...   \n",
-       "1  2006-10-23T11:51:36Z  EU Energy Chief Backs German Plan for Price Co...   \n",
-       "2  2006-10-23T20:00:29Z  Ex-Plant Worker Shuster Pleads Guilty in Tradi...   \n",
-       "3  2006-10-24T10:53:59Z  Russia, Ukraine End Dispute That Cut Gas Supplies   \n",
-       "4  2006-10-24T01:32:04Z  Jim Cramer: Bare Escentuals, Allergan, Medicis...   \n",
-       "\n",
-       "   price  \n",
-       "0      1  \n",
-       "1      1  \n",
-       "2      1  \n",
-       "3      1  \n",
-       "4      1  "
+       "       ari_time                                          ari_title  price\n",
+       "139  2010-06-13  ANZ Bank Seeking to Double Its Northeast Asian...      1\n",
+       "145  2010-06-13  Abu Dhabi Said to Invite Sulfur Granulation Pl...      1\n",
+       "47   2010-06-13  Agility, Arabtec, Gulf Finance House, Sahara, ...      1\n",
+       "188  2010-06-13  Air India, Boeing to Hold Talks Over Plane Del...      1\n",
+       "174  2010-06-13  Al-Qaeda Gunmen Storm Iraqi Central Bank, Kill...      1"
       ]
      },
      "execution_count": 3,
@@ -149,32 +142,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td></td>\n",
+       "      <td>2010-06-13</td>\n",
+       "      <td>bank of new zealand say to start marketing nz$...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.001181</td>\n",
-       "      <td></td>\n",
+       "      <td>2010-06-14</td>\n",
+       "      <td>banking regulator say forces driving china 's ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.001574</td>\n",
-       "      <td></td>\n",
-       "      <td>1</td>\n",
+       "      <td>2010-06-15</td>\n",
+       "      <td>broad commits # % of wealth take buffett pledg...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.001968</td>\n",
-       "      <td></td>\n",
+       "      <td>2010-06-16</td>\n",
+       "      <td>u.s. stocks trim losses south korea tell north...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.002755</td>\n",
-       "      <td>balda say investor asks</td>\n",
+       "      <td>2010-06-17</td>\n",
+       "      <td>australian prosecutors get evidence from monta...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -182,12 +175,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   ari_time                ari_title  price\n",
-       "0  0.000000                               1\n",
-       "1  0.001181                               1\n",
-       "2  0.001574                               1\n",
-       "3  0.001968                               1\n",
-       "4  0.002755  balda say investor asks      0"
+       "     ari_time                                          ari_title  price\n",
+       "0  2010-06-13  bank of new zealand say to start marketing nz$...      1\n",
+       "1  2010-06-14  banking regulator say forces driving china 's ...      1\n",
+       "2  2010-06-15  broad commits # % of wealth take buffett pledg...      0\n",
+       "3  2010-06-16  u.s. stocks trim losses south korea tell north...      1\n",
+       "4  2010-06-17  australian prosecutors get evidence from monta...      0"
       ]
      },
      "execution_count": 4,
@@ -209,16 +202,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], ['balda', 'say', 'investor', 'asks'], [], ['ace', 'lift', 'pay'], [], [], []]\n",
-      "CPU times: user 1.73 s, sys: 23.7 ms, total: 1.75 s\n",
-      "Wall time: 1.75 s\n"
+      "[['ari_time'], ['ari_title'], ['price'], ['anz', 'bank', 'seeking', 'to', 'double', 'its', 'northeast', 'asian', 'revenue', 'australian', 'reports'], ['abu', 'dhabi', 'said', 'to', 'invite', 'sulfur', 'granulation', 'plant', 'bids', 'for', 'shah', 'gas', 'field'], ['agility', 'arabtec', 'gulf', 'finance', 'house', 'sahara', 'zain', 'gulf', 'equity', 'preview'], ['air', 'india', 'boeing', 'to', 'hold', 'talks', 'over', 'plane', 'delivery', 'press', 'trust', 'reports'], ['al', 'qaeda', 'gunmen', 'storm', 'iraqi', 'central', 'bank', 'kill', 'wound', 'army', 'says'], ['algeria', 'slovenia', 'tied', 'at', 'halftime', 'of', 'world', 'cup', 'group', 'game'], ['asian', 'junk', 'bonds', 'risk', 'company', 'calls', 'amid', 'biggest', 'debt', 'rally', 'this', 'decade']]\n",
+      "CPU times: user 9.05 s, sys: 127 ms, total: 9.18 s\n",
+      "Wall time: 9.18 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "\n",
-    "corpus = list(map(simple_preprocess, train_reduce_df['ari_title']))\n",
+    "# del corpus\n",
+    "corpus = list(map(simple_preprocess, train_reduce_df)) # ['ari_title']\n",
     "corpus += list(map(simple_preprocess, train_df['ari_title']))\n",
     "\n",
     "print(corpus[0:10])"
@@ -233,8 +226,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16 s, sys: 124 ms, total: 16.1 s\n",
-      "Wall time: 6.05 s\n"
+      "CPU times: user 1min 27s, sys: 722 ms, total: 1min 27s\n",
+      "Wall time: 31.9 s\n"
      ]
     }
    ],
@@ -254,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max word count is 579 among 54947 titles.\n"
+      "Max word count is 17 among 312217 titles.\n"
      ]
     }
    ],
@@ -273,10 +266,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word2Vec(vocab=8723, size=50, alpha=0.025)\n",
-      "(54947, 3)\n",
-      "590964 28337 19614\n",
-      "0.6921692486854643\n"
+      "Word2Vec(vocab=22839, size=100, alpha=0.025)\n",
+      "(312217, 3)\n",
+      "2896872 61424 38585\n",
+      "0.6281746548580359\n"
      ]
     }
    ],
