--- a/word2vec_loader.ipynb
+++ b/word2vec_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%run common.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
     "def text_to_index(corpus, word2idx):\n",
     "    new_corpus = []\n",
+    "    index= 0\n",
     "    for doc in corpus:\n",
     "        new_doc = []\n",
     "        for word in simple_preprocess(doc):\n",
@@ -25,6 +37,15 @@
     "                new_doc.append(word2idx[word])\n",
     "            except:\n",
     "                new_doc.append(0)\n",
+    "        if not new_doc :\n",
+    "            for w in range(0, MAX_WORD_COUNT):\n",
+    "                new_doc.append(0)\n",
+    "        temp_doc = Counter(new_doc)\n",
+    "        if not doc:\n",
+    "            print(\"doc: \", index, new_doc, \"\\n\")\n",
+    "            index += 1\n",
+    "        final_doc = sorted(temp_doc, key= temp_doc.get, reverse=True)[:MAX_WORD_COUNT]\n",
+    "#         print(temp_doc, final_doc, \"\\n\")\n",
     "        new_doc_arr = np.array(new_doc)\n",
     "        new_corpus.append(new_doc_arr)\n",
     "    return np.array(new_corpus)"
@@ -32,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
